# cpp-http-server

./: CMakeLists.txt
public/: test.txt
src/: main.cpp  response.cpp  response.hpp  routes.cpp  routes.hpp  server.cpp  server.hpp
src/core/: compression.cpp  compression.hpp  request.cpp  request.hpp  response.cpp  response.hpp  router.cpp  router.hpp  routes.cpp  routes.hpp  view.hpp
src/views/: views.cpp  views.hpp
